--- a/main/index.html
+++ b/main/index.html
@@ -40,6 +40,8 @@
                 <a class="nav-link disabled">Disabled</a>
               </li>
             </ul>
+            <p>Hola
+            </p>
           </div>
         </div>
       </nav>
