--- a/main/index.html
+++ b/main/index.html
@@ -5,18 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
+  <title>Producto: 1</title>
   <link rel="stylesheet" href="./libs/normalize.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./libs/bootstrap-grid.min.css">
   <link rel="stylesheet" href="./css/style.css">
-
 </head>
 
 <body>
 <div class="container">
+
     <div class="section">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -46,124 +44,22 @@
       
       <div class="btn btn-add">
         <span>Add one week</span>
-        <button type="button" class="btn btn-primary">ADD </button>
+        <button type="button" class="btn btn-primary" id="nuevaCard">ADD </button>
       </div>
-</div >
+    </div >
+
     <div class="container">
-      <div class="row g-5">
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/img.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Drop</a>
-              <a href="#" class="btn btn-primary">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/img.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Drop</a>
-              <a href="#" class="btn btn-primary">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/img.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Drop</a>
-              <a href="#" class="btn btn-primary">More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/img.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Drop</a>
-              <a href="#" class="btn btn-primary">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/img.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Drop</a>
-              <a href="#" class="btn btn-primary">More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./img/img.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Drop</a>
-              <a href="#" class="btn btn-primary">More</a>
-            </div>
-          </div>
-        </div>
-
-
-
-
+      <div class="row g-5" id="contenedor">
       </div>
-
-
-
-
-
-
-
     </div>
-
-
 
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <script src="./main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> 
+
 </body>
 
 </html>
