--- a/main/index.html
+++ b/main/index.html
@@ -41,24 +41,48 @@
           </div>
         </div>
       </nav>
-      
-      <div class="btn btn-add">
-        <span>Add one week</span>
-        <button type="button" class="btn btn-primary" id="nuevaCard">ADD </button>
-      </div>
-    </div >
+    </div>
+    <!-- Botón que abre el modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">Agregar tarjeta</button>
 
-    <div class="container">
-      <div class="row g-5" id="contenedor">
+    <!-- Modal que contiene el formulario -->
+    <div class="modal fade" id="myModal" tabindex="1" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="myModalLabel">Agregar tarjeta</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="myForm">
+              <input type="number" placeholder="Enter week" id="weekInput">
+              <input type="number" placeholder="Enter years" id="yearInput">
+              <div>
+                <textarea type="text"placeholder="Description" rows="3" id="descInput"></textarea>
+              </div>
+              <input type="color" placeholder="Enter your color" id="colorInput">
+              <button type="submit" class="btn btn-primary">Add</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- Contenedor de la tarjeta -->
+    <div id="cardContainer">
+    <!-- Las nuevas tarjetas se agregarán aquí -->
+    </div>
+
 
   </div>
 
   <script src="./main.js"></script>
+  
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script> 
+
 
 </body>
 
